<resources>
    <string name="app_name">REC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">REC°</string>
    <string name="second_fragment_label">REC°</string>
    <string name="detail_fragment_label">REC°</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_signin">S\'inscrire</string>
    <string name="action_login">Se connecter</string>
    <string name="btCreaSoiree">Créer une soirée</string>
    <string name="action_recherchesoiree">Rechercher une soirée</string>
    <string name="retour_la_liste">Retour à la liste</string>
    <string name="liste_des_participants">Liste des participants</string>
    <string name="description_du_createur">Description du créateur</string>
    <string name="description_de_la_soiree">Description de la soirée</string>

    <string name="nom_de_la_soiree">Nom de la soirée</string>
    <string name="type_de_soiree">Type de soirée</string>
    <string name="code_postal">Code Postal</string>
    <string name="ville">Ville</string>
    <string name="adresse">Adresse</string>
    <string name="soiree_ouverte">Soirée ouverte?</string>
    <string name="alcool">Alcool ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="heure">Heure</string>
    <string name="date_de_la_soiree">Date de la soirée</string>
    <string name="courte_description_de_la_soir_e">Courte description de la soirée</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">REC°</string>
    <string name="supprimer_la_soiree">Supprimer la soirée</string>
</resources>